# saft-mirror

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  Rocket.toml  flake.nix
Database/: kiwi.db
docs/: 1.3.Meeting.txt
docs/modulbeschreibung/: application_architecture.txt  kickzahl.txt
docs/typst/: .invoice.typ.swp  invoice.typ
modulbeschreibung/: application_architecture.txt  inventur-track.odg  preiskalkulation.txt
modules/feigen/: Cargo.toml  build.rs
modules/feigen/compiled-assets/migrations/: 202405111220_initial.sql
modules/feigen/compiled-assets/templates/: index.html  transactions.html  transactions_list.html.tera  transactions_new.html.tera
modules/feigen/src/: db.rs  main.rs  transactions.rs
modules/genfile/: Cargo.toml
modules/genfile/compiled-assets/json/: invoice.json
modules/genfile/compiled-assets/typst-templates/: invoice.typ
modules/genfile/src/: invoice.rs  main.rs
modules/include_json/: Cargo.toml
modules/include_json/src/: cache.rs  lib.rs  processor.rs
modules/include_json/tests/: test.rs
modules/kaki/: Cargo.toml
modules/kaki/compiled-assets/json/: invoice.json
modules/kaki/compiled-assets/typst-templates/: invoice.typ
modules/kaki/src/: invoice.rs  main.rs
modules/kiwi/: Cargo.toml
modules/kiwi/compiled-assets/templates/: db_list.html.tera  edit.html.tera  entry.html.tera  home.html.tera
modules/kiwi/src/: db.rs  example.rs  main.rs
modules/libsaft/: Cargo.toml
modules/libsaft/compiled-assets/html/: 500.html  error.html
modules/libsaft/src/: db.rs  docs.rs  err.rs  lib.rs  pdf.rs  resources.rs  template.rs
modules/libsaft/src/pdf/: worlds.rs
modules/opfel/: Cargo.toml
modules/opfel/compiled-assets/migrations/: 202405111927_initial.sql
modules/opfel/compiled-assets/templates/: index.html.tera
modules/opfel/compiled-assets/templates/articles/: articles.html  articles.html.tera  edit.html.tera  entries.html.tera  entry.html.tera  new.html.tera
modules/opfel/compiled-assets/templates/common/: base.html  nav.html
modules/opfel/src/: articles.rs  db.rs  main.rs  routes.rs  semesterverwaltung.rs
modules/pos/: Cargo.toml
modules/pos/compiled-assets/templates/: index.html
modules/pos/src/: main.rs
