[package]
name = "kiwi"
version = "0.1.0"
edition = "2021"

[dependencies]

sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls","sqlite" ] }
rustls = "0.23.5"
tokio = { version = "1.37.0", features = ["full"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"

rocket = "0.5"
rocket_okapi = { version = "0.8", features = ["rapidoc"] }
serde = "1.0"
serde_json = "1.0"

rocket_db_pools = { version = "0.1.0", features = ["sqlx_sqlite"]}
