[package]
name = "kiwi"
version = "0.1.0"
edition = "2021"

[dependencies]
libsaft = { path = "../libsaft", features = ["web"] }

sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls","sqlite" ] }
rustls = "0.23.5"
tokio = { version = "1.37.0", features = ["full"] }

rocket = "0.5"
rocket_okapi = { version = "0.8", features = ["rapidoc", "rocket_dyn_templates", "rocket_db_pools"] }
schemars = "0.8"
serde = "1.0"
serde_json = "1.0"

rocket_db_pools = { version = "0.1.0", features = ["sqlx_sqlite"]}
rocket_dyn_templates = { version = "0.1.0", features = ["tera"]}
