[package]
name = "libsaft"
version = "0.1.0"
edition = "2021"

[dependencies]
typst = { git = "https://github.com/typst/typst", rev = "70ca0d2", optional = true }
typst-pdf = { git = "https://github.com/typst/typst", rev = "70ca0d2", optional = true }
comemo = { version = "0.3", optional = true }
ecow = { version = "0.2", optional = true }

serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

rocket = { version = "0.5", optional = true }
rocket_okapi = { version = "0.8", optional = true }
rocket_db_pools = { version = "0.1", features = [], optional = true }

tera = { version = "1.19", optional = true }

chrono = "0.4"

[features]
default = []
pdf = ["typst", "typst-pdf", "comemo", "ecow", "serde", "serde_json"]
web = ["rocket", "rocket_okapi", "rocket_db_pools", "tera", "serde"]

[package.metadata.docs.rs]
all-features = true
